--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: 2018 CICESE Metatranscriptomics workshop 
 site_url: https://bluegenes.github.io/2018-metatranscriptomics
-repo_name: 2018-metatranscriptomics-workshop-dev
+repo_name: metatranscriptomics
 repo_url: https://github.com/bluegenes/2018-metatranscriptomics-workshop-dev
 edit_uri: ""
 
@@ -18,7 +18,7 @@ theme:
 
   # pretty colors! see https://squidfunk.github.io/mkdocs-material/getting-started/#primary-colors
   palette:
-    primary: 'darkblue'
+    primary: 'teal'
     accent: 'blue'
   
   # fun logos! see https://material.io/icons/
