--- a/tara_f5-20_config.yaml
+++ b/tara_f5-20_config.yaml
@@ -1,9 +1,9 @@
-samples: "tara_f5-20_samples.tsv"
+samples: "tara_f5-20_TSRNA_samples.tsv"
 
 basename: 'tara_f5-20'
 
 data_directory: "/tara/data/TS_RNA"
-download_data: False
+download_data: True
 
 trimmomatic:
   trim_cmd:  "ILLUMINACLIP:{}:2:40:15 LEADING:20 TRAILING:20 SLIDINGWINDOW:4:15 MINLEN:35"
