--- a/nemaRNA_config.yaml
+++ b/nemaRNA_config.yaml
@@ -4,6 +4,10 @@ basename: "nemaRNA"
 
 download_data: False
 
+assembly_input:
+  assembly: "tara_f5-20_plass.fasta"
+  assembly_ext: "_plass"
+
 trimmomatic:
   trim_cmd:  "ILLUMINACLIP:{}:2:40:15 LEADING:20 TRAILING:20 SLIDINGWINDOW:4:15 MINLEN:35"
 
