--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,9 @@ extra_css:
 
 # give a title for each page
 nav:
-  - 'Index' : 'index.md'
+  - 'Overview' : 'index.md'
+  - 'Code of Conduct': 'code-of-conduct.md'
   - 'Bioconda': 'working-with-bioconda.md'
+  - 'Count Transcriptomes': 'count_transcriptomes.md'
   # etc...
 
