--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,11 +36,11 @@ extra_css:
 # give a title for each page
 nav:
   - 'Overview':
-      - 'Welcome': 'welcome.md'
       - 'Schedule' : 'index.md'
       - 'Code of Conduct': 'code-of-conduct.md'
 
   - 'Day 1':
+      - 'Bienvenidos': 'welcome.md'
       - 'Cluster login': 'cicese-cluster.md'
       - 'Bioconda': 'working-with-bioconda.md'
       - 'TARA Sample Data': 'tara-sample-data.md'
